[metadata]
name = soothsayer_utils
version = 2022.2.9
author = Josh L. Espinoza
author_email = jespinoz@jcvi.org
url = https://github.com/jolespin/{name}
description = Utility functions for Soothsayer
license = BSD-3
platform = any
keywords = {keywords}
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

    
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Tracker = https://github.com/jolespin/{name}/issues
    Changelog = https://github.com/jolespin/{name}/blob/master/devel.txt

[options]
zip_safe = false
python_requires = >= 2.7, 3.5 
packages = {name}
setup_requires =
    # setuptools
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
    # setuptools >=46.4.0     # let's you use attr: to extract version from a module
install_requires =
    pandas >= 0.24
    numpy >= 1.11
    requests
    pathlib2 
    tqdm >= 4.19
    tzlocal
    bz2file 

[sdist]
formats = zip, gztar


exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

